--- a/package.json
+++ b/package.json
@@ -1,9 +1,12 @@
 {
   "devDependencies": {
+    "@types/jquery": "^3.5.16",
     "pug": "^3.0.2",
-    "sass": "^1.57.1"
+    "sass": "^1.57.1",
+    "typescript": "^4.9.4"
   },
   "scripts": {
-    "build": " tsc -p src/tsconfig.json && node src/build.js"
+    "build": "node scripts/build.js",
+    "watch": "node scripts/watch.js"
   }
 }
